--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -13,7 +13,7 @@ body {
 
 /* Mis trabajos */
 
-#Mis-trabajos .image-top {
+#mis-trabajos .image-top {
   height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
